--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "android:prod": "cd android && ./gradlew assembleRelease",
     "android:usb": "adb -d install -r android/app/build/outputs/apk/app-release.apk",
     "ios": "react-native run-ios",
+    "ios:testflight": "cd ios && bundle exec fastlane beta",
     "test": "jest",
     "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html"
   },
