--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-webview-bridge-updated": "^1.0.8",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#19cf5e8b",
     "react-navigation": "^1.0.0-beta.11",
+    "react-navigation-is-focused-hoc": "patlux/react-navigation-is-focused-hoc",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
