--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,9 +24,12 @@
       <activity
           android:name=".SplashActivity"
           android:label="@string/app_name"
-          android:theme="@style/SplashTheme">
+          android:theme="@style/SplashTheme"
+          android:launchMode="singleTask">
+
           <intent-filter>
               <action android:name="android.intent.action.MAIN" />
+              <category android:name="android.intent.category.DEFAULT" />
               <category android:name="android.intent.category.LAUNCHER" />
           </intent-filter>
       </activity>
@@ -38,7 +41,6 @@
         android:windowSoftInputMode="adjustResize">
         <intent-filter>
             <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="@string/link_schema" />
             <data android:scheme="http" android:host="hylo.com" />
