--- a/ios/HyloReactNative/Info.plist
+++ b/ios/HyloReactNative/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Hylo</string>
+	<string>HyloReactNative</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,61 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.3</string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb${FACEBOOK_APP_ID}</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.499795713870-1thckdu3snp9685btathf0rvugr9fpb1</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>org.hylo.HyloReactNative</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>org.hylo.HyloReactNative</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>HyloApp</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>HyloApp</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleVersion</key>
-	<string>86</string>
-	<key>FacebookAppID</key>
-	<string>${FACEBOOK_APP_ID}</string>
-	<key>FacebookDisplayName</key>
-	<string>Hylo</string>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>fbapi</string>
-		<string>fb-messenger-api</string>
-		<string>fbauth2</string>
-		<string>fbshareextension</string>
-	</array>
+	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -80,55 +30,17 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>127.0.0.1</key>
-			<dict>
-				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-			</dict>
 			<key>localhost</key>
 			<dict>
-				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
 		</dict>
 	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Hylo would like to access your camera for your profile photo upload. Your photos wont be shared without your permission.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>This requires access to the microphone.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Hylo would like to access your photo gallery for your profile photo upload. Your photos wont be shared without your permission.</string>
-	<key>OneSignalAppID</key>
-	<string>${ONESIGNAL_APP_ID}</string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>hylo-evo-icons.ttf</string>
-		<string>lineto-circular-black.ttf</string>
-		<string>lineto-circular-blackItalic.ttf</string>
-		<string>lineto-circular-bold.ttf</string>
-		<string>lineto-circular-boldItalic.ttf</string>
-		<string>lineto-circular-book.ttf</string>
-		<string>lineto-circular-bookItalic.ttf</string>
-		<string>lineto-circular-medium.ttf</string>
-		<string>lineto-circular-mediumItalic.ttf</string>
-		<string>Entypo.ttf</string>
-		<string>EvilIcons.ttf</string>
-		<string>FontAwesome.ttf</string>
-		<string>Foundation.ttf</string>
-		<string>Ionicons.ttf</string>
-		<string>MaterialCommunityIcons.ttf</string>
-		<string>MaterialIcons.ttf</string>
-		<string>Octicons.ttf</string>
-		<string>SimpleLineIcons.ttf</string>
-		<string>Zocial.ttf</string>
-		<string>Feather.ttf</string>
-	</array>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
