--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
     "re-reselect": "^2.0.0",
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.4",
+    "react": "16.8.6",
+    "react-native": "0.60.6",
     "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^1.3.0",
     "react-native-device-info": "^0.21.5",
@@ -71,17 +71,21 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
+    "@babel/core": "^7.9.6",
+    "@babel/runtime": "^7.9.6",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^26.0.1",
     "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-remove-style": "^0.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.2.0",
     "babel-plugin-transform-remove-console": "^6.9.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-react-native": "^4.0.0",
+    "eslint": "^7.1.0",
+    "jest": "^26.0.1",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.8.6",
     "faker": "^4.1.0",
-    "jest": "^22.4.3",
     "jest-simple-reporter": "^0.1.0",
-    "react-test-renderer": "^16.3.0-alpha.1",
     "remote-redux-devtools": "^0.5.12",
     "reselect-tools": "^0.0.6",
     "standard": "^11.0.1",
