--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,8 +8,8 @@
 		"normanstypczynskipublisher.gqlformatter",
 		"orsenkucher.vscode-graphql",
 		"tlent.jest-snapshot-language-support",
-		"standard.vscode-standard",
-		"dbaeumer.vscode-eslint"
+		"dbaeumer.vscode-eslint",
+		"codeandstuff.package-json-upgrade"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
