--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^7.1.10",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.2.0",
@@ -70,16 +69,16 @@
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-onesignal": "^4.3.6",
-    "react-native-pager-view": "^5.4.9",
+    "react-native-onesignal": "^4.3.7",
+    "react-native-pager-view": "^5.4.15",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "2.3.0-beta.4",
+    "react-native-reanimated": "2.7.0",
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
-    "react-native-root-toast": "^3.2.1",
-    "react-native-safe-area-context": "^4.1.2",
-    "react-native-screens": "^3.13.0",
+    "react-native-root-toast": "^3.3.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-triangle": "^0.0.9",
     "react-native-url-polyfill": "^1.3.0",
