--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@flyerhq/react-native-keyboard-accessory-view": "^2.4.0",
     "@intercom/intercom-react-native": "^1.0.5",
     "@invertase/react-native-apple-authentication": "^2.1.5",
+    "@native-html/iframe-plugin": "^2.6.1",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/hooks": "^2.8.1",
@@ -44,7 +45,7 @@
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.2",
     "html-to-text": "^8.1.0",
-    "hylo-shared": "1.7.0",
+    "hylo-shared": "1.9.0-beta.2",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^1.3.7",
     "moment": "^2.29.1",
@@ -113,13 +114,13 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "7.32.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-jsx": "^10.0.0",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-testing-library": "^5.0.5",
