--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,8 +145,8 @@ android {
         applicationId "com.hylo.hyloandroid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 204
-        versionName "4.0.3"
+        versionCode 205
+        versionName "4.1.0-beta.0"
         // // Enabling multidex support.
         // multiDexEnabled true
         // ndk {
