--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.2",
     "html-to-text": "^8.1.0",
-    "hylo-shared": "4.1.0-beta.13",
+    "hylo-shared": "4.1.0-beta.14",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^1.3.7",
     "moment-timezone": "^0.5.37",
@@ -57,6 +57,7 @@
     "react": "17.0.2",
     "react-native": "^0.67.4",
     "react-native-autocomplete-input": "^3.5.0",
+    "react-native-autoheight-webview": "^1.6.4",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "4.1.3",
     "react-native-confirmation-code-field": "^7.3.0",
@@ -84,7 +85,6 @@
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^11.23.1",
-    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
     "react-redux": "^7.2.6",
     "redux": "^4.0.5",
     "redux-orm": "^0.16.2",
