--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,8 +145,8 @@ android {
         applicationId "com.hylo.hyloandroid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 210
-        versionName "4.1.0-beta.5"
+        versionCode 211
+        versionName "4.1.1"
         // // Enabling multidex support.
         // multiDexEnabled true
         // ndk {
