--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         buildToolsVersion = "31.0.0"
         minSdkVersion = 23
 
+        compileSdkVersion = 31
+        targetSdkVersion = 31
+
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
             ndkVersion = "24.0.8215888"
