--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.1.1",
-    "@sentry/react-native": "^3.4.3",
+    "@sentry/react-native": "^4.6.1",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
@@ -72,7 +72,7 @@
     "react-native-pager-view": "^6.0.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "2.11.0",
+    "react-native-reanimated": "3.0.0-rc.3",
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
     "react-native-root-toast": "^3.4.0",
@@ -81,7 +81,7 @@
     "react-native-tab-view": "^3.3.0",
     "react-native-triangle": "^0.0.9",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-vector-icons": "^7.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.23.1",
     "react-redux": "^7.2.6",
     "redux": "^4.0.5",
