--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.1.1",
-    "@sentry/react-native": "^4.6.1",
+    "@sentry/react-native": "5.0.0-alpha.5",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
