--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clean-auto": "react-native clean-project-auto"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.14.0",
     "@flyerhq/react-native-keyboard-accessory-view": "^2.4.0",
     "@intercom/intercom-react-native": "^3.0.5",
     "@invertase/react-native-apple-authentication": "^2.1.5",
@@ -40,7 +41,7 @@
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.1.1",
-    "@sentry/react-native": "5.0.0-alpha.5",
+    "@sentry/react-native": "5.0.0-alpha.6",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
@@ -125,7 +126,7 @@
     "jest-environment-node": "^27.5.0",
     "jest-serializer-graphql": "^1.0.0",
     "jest-watch-typeahead": "^1.0.0",
-    "metro-react-native-babel-preset": "^0.72.3",
+    "metro-react-native-babel-preset": "^0.73.2",
     "msw": "^0.38.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
@@ -135,7 +136,7 @@
     "redux-logger": "^3.0.6",
     "remote-redux-devtools": "^0.5.16",
     "reselect-tools": "^0.0.7",
-    "standard": "^16.0.4",
+    "standard": "^17.0.0",
     "timezone-mock": "^1.3.4",
     "uri-scheme": "^1.0.120",
     "validator": "^8.0.0"
