--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.1.1",
     "@sentry/react-native": "5.0.0-alpha.6",
+    "expo": "^46.0.0",
+    "expo-constants": "~13.2.4",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
