--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ android/gradle/wrapper/dists/**
 android/gradle/daemon/**
 android/gradle/native/**
 android/gradle/kotlin-profile/**
+
+# expo
+.expo
