--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-navigation/stack": "^6.1.1",
     "@sentry/react-native": "5.0.0-alpha.6",
     "expo": "^46.0.0",
+    "expo-clipboard": "^3.1.0",
     "expo-constants": "~13.2.4",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
