--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/hooks": "^2.8.1",
+    "@react-native-community/picker": "^1.8.1",
     "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
@@ -67,7 +68,7 @@
     "react-native-pager-view": "^6.0.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "3.0.0-rc.3",
+    "react-native-reanimated": "3.0.0-rc.4",
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.24",
     "react-native-root-toast": "^3.4.0",
@@ -107,7 +108,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-config-standard-react": "^11.0.1",
+    "eslint-config-standard-react": "^12.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-node": "^11.1.0",
