--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
     "react-native-onesignal": "^4.4.1",
     "react-native-pager-view": "^6.0.1",
     "react-native-picker-select": "^8.0.4",
