--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^4.10.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-onesignal": "^4.4.1",
