--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-device-info": "^10.3.0",
     "react-native-document-picker": "^8.1.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.8.0",
