--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,9 +34,25 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
+        exclusiveContent {
+            // NOTE: THIS WAS A HOT FIX.
+            // THIS WILL PROBABLY BE THE CODE USED IN THE NEXT RN VERSION BUT TBD. IT FIXES THE
+            // BUILD FOR NOW.
+            // ref: https://github.com/facebook/react-native/issues/35204
+            // ref: https://github.com/facebook/react-native/pull/35208
+            // ---
+            // We get React Native's Android binaries exclusively through npm,
+            // from a local Maven repo inside node_modules/react-native/.
+            // (The use of exclusiveContent prevents looking elsewhere like Maven Central
+            // and potentially getting a wrong version.)
+            filter {
+                includeGroup "com.facebook.react"
+            }
+            forRepository {
+                maven {
+                    url "$rootDir/../node_modules/react-native/android"
+                }
+            }
         }
         maven {
             // Android JSC is installed from npm
