--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "html-entities": "^2.3.3",
-    "hylo-shared": "5.1.2",
+    "hylo-shared": "5.1.3",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^2.1.0",
     "moment-timezone": "^0.5.37",
@@ -78,6 +78,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-share": "^8.0.0",
+    "react-native-svg": "^13.6.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-triangle": "^0.0.9",
     "react-native-url-polyfill": "^1.3.0",
