--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-native-webview": "^11.23.1",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
+    "redux-mock-store": "^1.5.4",
     "redux-orm": "^0.16.2",
     "redux-promise": "^0.6.0",
     "reselect": "^4.1.6",
