--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "@intercom/intercom-react-native": "^3.0.5",
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@native-html/iframe-plugin": "^2.6.1",
-    "@react-native-async-storage/async-storage": "^1.15.17",
-    "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-community/hooks": "^2.8.1",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-community/hooks": "^2.8.0",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/elements": "^1.3.6",
     "@react-navigation/material-top-tabs": "^6.3.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.4",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.2.0",
     "@sentry/react-native": "5.0.0-alpha.7",
     "babel-plugin-import-graphql": "^2.8.1",
     "graphql": "^16.3.0",
@@ -52,8 +52,8 @@
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "re-reselect": "^4.0.1",
-    "react": "18.2.0",
-    "react-native": "0.70.12",
+    "react": "18.1.0",
+    "react-native": "^0.70.0",
     "react-native-autoheight-webview": "^1.6.5",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "4.3.2",
@@ -64,28 +64,28 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "^2.6.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-modal": "^13.0.1",
+    "react-native-modal": "^13.0.0",
     "react-native-onesignal": "^4.4.1",
     "react-native-pager-view": "^6.0.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "3.0.0-rc.4",
-    "react-native-render-html": "^6.3.4",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-render-html": "^6.1.0",
     "react-native-restart": "^0.0.24",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-share": "^8.0.0",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-triangle": "^0.0.9",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "^11.23.1",
+    "react-native-webview": "^11.23.0",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-mock-store": "^1.5.4",
@@ -124,17 +124,17 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-testing-library": "^5.9.1",
-    "jest": "^29.2.2",
+    "jest": "^26.6.3",
     "jest-environment-node": "^29.2.2",
     "jest-serializer-graphql": "^1.0.0",
     "jest-watch-typeahead": "^2.2.0",
-    "metro-react-native-babel-preset": "^0.73.2",
+    "metro-react-native-babel-preset": "^0.72.1",
     "msw": "^0.47.4",
     "patch-package": "^6.5.0",
     "postinstall-postinstall": "^2.1.0",
     "react-native-clean-project": "^4.0.1",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.1.0",
     "redux-logger": "^3.0.6",
     "reselect-tools": "^0.0.7",
     "standard": "^17.0.0",
