--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@native-html/iframe-plugin": "^2.6.1",
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/hooks": "^2.8.0",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-google-signin/google-signin": "^8.0.1",
@@ -206,6 +206,7 @@
         "core",
         "core-android",
         "core-ios",
+        "clipboard",
         "gestures",
         "hooks",
         "html",
