--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,8 +85,8 @@ android {
         applicationId "com.hylo.hyloandroid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 275
-        versionName "5.3.1-0"
+        versionCode 276
+        versionName "5.4.0"
     }
     signingConfigs {
         debug {
