--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,10 @@
   "i18n-ally.pathMatcher": "{locale}.json",
   "i18n-ally.sourceLanguage": "en",
   "i18n-ally.displayLanguage": "en",
-  "i18n-ally.keystyle": "nested",
+  "i18n-ally.keystyle": "flat",
   "i18n-ally.sortKeys": true,
   "i18n-ally.keepFulfilled": true,
   "i18n-ally.disablePathParsing": true,
   "i18n-ally.extract.ignored": [],
+  "i18n-ally.annotationDelimiter": "=",
 }
