--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.1.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
+    "@react-native/metro-config": "^0.72.12",
     "@react-navigation/devtools": "^6.0.10",
     "@rnx-kit/align-deps": "^2.2.4",
     "@testing-library/jest-native": "^5.1.2",
@@ -141,7 +141,7 @@
     "jest-serializer-graphql": "^1.0.0",
     "jest-transform-stub": "^2.0.0",
     "jest-watch-typeahead": "^2.2.0",
-    "metro-react-native-babel-preset": "0.76.8",
+    "metro-react-native-babel-preset": "^0.76.9",
     "msw": "^0.47.4",
     "patch-package": "^6.5.0",
     "postinstall-postinstall": "^2.1.0",
