--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@expo/react-native-action-sheet": "^4.0.1",
-    "@flyerhq/react-native-keyboard-accessory-view": "^2.4.0",
     "@intercom/intercom-react-native": "^6.2.0",
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@native-html/iframe-plugin": "^2.6.1",
@@ -73,6 +72,7 @@
     "react-native-gesture-handler": "^2.6.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-keyboard-accessory": "^0.1.16",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.0",
     "react-native-onesignal": "^4.4.1",
