--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,8 +85,8 @@ android {
         applicationId "com.hylo.hyloandroid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 279
-        versionName "5.5.2-0"
+        versionCode 280
+        versionName "5.5.2"
     }
     signingConfigs {
         debug {
