--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "reselect": "^4.1.6",
     "sails.io.js": "^1.2.1",
     "socket.io-client": "2.3.1",
-    "tinycolor2": "^1.4.2"
+    "tinycolor2": "^1.4.2",
+    "urql": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -117,6 +118,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@urql/devtools": "^2.0.3",
     "babel-jest": "^29.2.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-module-resolver": "^4.1.0",
